--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>FizzBuzzDOM</h1>
+        <!-- <h1>FizzBuzzDOM</h1> -->
         <div class="row"></div>
     </div>
     <script src="js/script.js"></script>
